fix: tweet whitespace blocking

--- a/app/styles/index.less
+++ b/app/styles/index.less
@@ -171,7 +171,8 @@ a, a:hover, a:visited, a:active {
 }
 
 .emoji {
-  width: 25px;
+  width: 1em;
+  margin: 0 auto;
 }
 
 .tweet-animation {
